--- a/package.json
+++ b/package.json
@@ -4,10 +4,33 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "test:unit": "vitest run"
+    "dev": "vite",
+    "build": "vue-tsc -b && vite build",
+    "preview": "vite preview",
+    "test:unit": "vitest run",
+    "test:e2e": "cypress run",
+    "test:e2e:open": "cypress open",
+    "lint": "eslint src tests --ext .ts,.vue",
+    "lint:fix": "eslint src tests --ext .ts,.vue --fix",
+    "format": "prettier --write \"src/**/*.{ts,vue}\" \"tests/**/*.ts\""
+  },
+  "dependencies": {
+    "vue": "^3.4.0"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.52.0",
+    "@typescript-eslint/parser": "^8.52.0",
+    "@vitejs/plugin-vue": "^5.0.0",
+    "@vue/tsconfig": "^0.5.0",
+    "cypress": "^13.6.0",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-vue": "^10.6.2",
+    "prettier": "^3.7.4",
     "typescript": "^5.3.3",
-    "vitest": "^1.6.0"
+    "vite": "^5.0.0",
+    "vitest": "^1.6.0",
+    "vue-tsc": "^2.0.0"
   }
 }
