--- a/package.json
+++ b/package.json
@@ -15,18 +15,23 @@
     "format": "prettier --write \"src/**/*.{ts,vue}\" \"tests/**/*.ts\""
   },
   "dependencies": {
+    "chart.js": "^4.5.1",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "vue": "^3.4.0"
   },
   "devDependencies": {
+    "@testing-library/vue": "^8.1.0",
     "@typescript-eslint/eslint-plugin": "^8.52.0",
     "@typescript-eslint/parser": "^8.52.0",
     "@vitejs/plugin-vue": "^5.0.0",
+    "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.5.0",
     "cypress": "^13.6.0",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-vue": "^10.6.2",
+    "jsdom": "^27.4.0",
     "prettier": "^3.7.4",
     "typescript": "^5.3.3",
     "vite": "^5.0.0",
