--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
     "test:unit": "vitest run",
-    "test:e2e": "cypress run",
-    "test:e2e:open": "cypress open",
+    "test:e2e": "npm run build && start-server-and-test 'npm run preview -- --port 5173' http://localhost:5173 'cypress run'",
+    "test:e2e:dev": "start-server-and-test 'npm run dev' http://localhost:5173 'cypress run'",
+    "test:e2e:open": "start-server-and-test 'npm run dev' http://localhost:5173 'cypress open'",
     "lint": "eslint src tests --ext .ts,.vue",
     "lint:fix": "eslint src tests --ext .ts,.vue --fix",
     "format": "prettier --write \"src/**/*.{ts,vue}\" \"tests/**/*.ts\""
@@ -33,6 +34,7 @@
     "eslint-plugin-vue": "^10.6.2",
     "jsdom": "^27.4.0",
     "prettier": "^3.7.4",
+    "start-server-and-test": "^2.1.3",
     "typescript": "^5.3.3",
     "vite": "^5.0.0",
     "vitest": "^1.6.0",
