--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "chart.js": "^4.5.1",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "fflate": "^0.8.2",
     "vue": "^3.4.0"
   },
   "devDependencies": {
